refactor : 전체 기사 조회 refactor